tests/snapshots/examples_fixtures/type_system__27_top_level_pure_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/27_top_level_pure_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
