tests/snapshots/examples_fixtures/type_system__28_effect_inside_main_allowed.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/28_effect_inside_main_allowed.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
