tests/snapshots/examples_fixtures/type_system__29_main_handles_custom_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/29_main_handles_custom_effect.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
