tests/snapshots/examples_fixtures/type_system__30_effect_poly_hof_nested_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/30_effect_poly_hof_nested_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
