tests/snapshots/examples_fixtures/type_system__31_effect_poly_partial_handle_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/31_effect_poly_partial_handle_ok.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
