tests/snapshots/examples_fixtures/type_system__32_effect_poly_mixed_io_time_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/32_effect_poly_mixed_io_time_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
