tests/snapshots/examples_fixtures/type_system__58_strict_private_unannotated_allowed.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/58_strict_private_unannotated_allowed.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
