tests/snapshots/examples_fixtures/type_system__59_strict_underscore_public_still_checked.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/59_strict_underscore_public_still_checked.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
