tests/snapshots/examples_fixtures/type_system__60_strict_module_public_checked.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/60_strict_module_public_checked.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
