tests/snapshots/examples_fixtures/type_system__61_strict_module_private_unannotated_allowed.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/61_strict_module_private_unannotated_allowed.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
