tests/snapshots/examples_fixtures/type_system__64_real_program_strict_public_app.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/64_real_program_strict_public_app.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
